# rooti

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml
src/: app.rs  diagnostics.rs  main.rs
src/render/: geometry.rs  mod.rs  slint_bridge.rs
src/render/leaves/: ginkgo.rs  mod.rs
src/tree/: biology.rs  growth.rs  mod.rs  node.rs  rng.rs  species.rs
ui/: tree.slint
