[package]
name = "desktop-tree"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = { version = "1.15.1", features = ["renderer-skia"] }
serde = { version = "1.0.228", features = ["derive"] }
display-info = "0.5.9"
i-slint-backend-winit = "=1.15.1"
rand = "0.10.0"

[build-dependencies]
slint-build = "1.15"
winresource = "0.1"
