[package]
name = "desktop-tree"
version = "0.3.0"
edition = "2024"
description = "A biologically inspired tree simulation with a GUI built using Slint."
license = "GPL-3"
build = "build.rs"

[dependencies]
slint = { version = "1.15.1", features = ["renderer-skia"] }
serde = { version = "1.0.228", features = ["derive"] }
display-info = "0.5.9"
i-slint-backend-winit = "=1.15.1"
rand = "0.10.0"
cliff = "0.3.2"
sysinfo = { version = "0.33", optional = true }

[build-dependencies]
slint-build = "1.15"
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "fat"        
strip = true       
codegen-units = 1

[features]
diagnostics = ["sysinfo"]
